config/samples/paco/interface-infra.yaml
apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaInterfacesInterface
metadata:
  name: interface-lag-group-infra
  labels:
    target: leaf1
spec:
  interface:
  - name: irb1
    admin-state: enable
    description: "k8s-irb1"
  - name: ethernet-1/1
    admin-state: enable
    description: "k8s-server-1"
    ethernet:
      aggregate-id: lag1
      port-speed: 10G
  - name: ethernet-1/2
    admin-state: enable
    description: "k8s-server-2"
    ethernet:
      aggregate-id: lag2
      port-speed: 10G
  - name: lag1
    admin-state: enable
    description: "k8s-lag-1"
    vlan-tagging: true
    lag:
      lag-type: lacp
      member-speed: 10G
      lacp:
        interval: FAST
        lacp-mode: ACTIVE
        admin-key: 1
        system-id-mac: 00:00:00:00:00:01
  - name: lag2
    admin-state: enable
    description: "k8s-lag-2"
    vlan-tagging: true
    lag:
      lag-type: lacp
      member-speed: 10G
      lacp:
        interval: FAST
        lacp-mode: ACTIVE
        admin-key: 2
        system-id-mac: 00:00:00:00:00:02
