config/samples/paco/network-instance-grp100-bgp.yaml
apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgp
metadata:
  name: network-instance-group-100-bgp
  labels:
    target: leaf1
spec:
  network-instance-name: ipVrf105
  bgp:
    admin-state: enable
    autonomous-system: 110010
    router-id: 10.254.25.253
    ebgp-default-policy:
      import-reject-all: true
      export-reject-all: true
    group: 
      - group-name: upf
        admin-state: enable
        peer-as: 1000
        ipv4-unicast:
          admin-state: enable
        ipv6-unicast:
          admin-state: enable
    neighbor:
      - peer-address: 10.254.25.254
        peer-group: upf
        transport:
          local-address: 10.254.25.253
    ipv4-unicast:
      admin-state: enable
      multipath:
        allow-multiple-as: true
        max-paths-level-1: 8
        max-paths-level-2: 8
    ipv6-unicast:
      admin-state: enable
      multipath:
        allow-multiple-as: true
        max-paths-level-1: 8
        max-paths-level-2: 8
    preference:
      ebgp: 100
