config/samples/paco/network-instance-grp200.yaml
apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstance
metadata:
  name: network-instance-group-200
  labels:
    target: leaf1
spec:
  network-instance:
  - name: macVrf201
    type: mac-vrf
    admin-state: enable
    description: "k8s-macVrf201"
    interface:
    - name: irb1.201
    - name: lag1.201
    - name: lag2-201
    bridge-table:
      mac-duplication:
        admin-state: enable
        action: blackhole
  - name: macVrf203
    type: mac-vrf
    admin-state: enable
    description: "k8s-macVrf203"
    interface:
    - name: irb1.203
    - name: lag1.203
    - name: lag2-203
    bridge-table:
      mac-duplication:
        admin-state: enable
        action: blackhole
  - name: ipVrf205
    type: ip-vrf
    admin-state: enable
    description: "k8s-ipVrf205"
    interface:
    - name: irb1.201
    - name: irb1.203
