config/samples/paco/subinterface-lag1-grp100.yaml
apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaInterfacesInterfaceSubinterface
metadata:
  name: subinterface-lag1-grp100
  labels:
    target: leaf1
spec:
  interface-name: lag1
  subinterface:
  - index: 101
    admin-state: enable
    description: "k8s-lag1.101"
    type: bridged
    vlan:
      encap:
        single-tagged:
          vlan-id: 101
  - index: 103
    admin-state: enable
    description: "k8s-lag1.101"
    type: bridged
    vlan:
      encap:
        single-tagged:
          vlan-id: 103
